# chatbot-bank

./: README.md  hello.py  main.py  pyproject.toml
data/processed/: 1621830497-handbook-nasabah-19-5-2021-1.md  RIPLAY-UMUM-BLife-Solusi-Abadi-Plus.md  RIPLAY-UMUM-BLife-Solusi-Pintar.md  RIPLAY-Umum-Maksima-Sehat.md  RIPLAY_UMUM_Optima_Group_Life.md  RIPLAY_Umum_-_AJK_Non_Collateral_Digifleksi_26122020.md  RIPLAY_Umum_-_BNI_Life_Double_Protection.md  RIPLAY_Umum_-_OCP1.md  RIPLAY_Umum_-_Optima_Group_Health.md  RIPLAY_Umum_BNI_Life_Spectra_Double_Power.md  tabungan.md
db/: chroma.sqlite3
notebook/: chromadb.ipynb  rag.ipynb
notebook/chroma_db/9d921184-fa71-484a-ad3e-4e5689b7c8de/: index_metadata.pickle
notebook/db/: chroma.sqlite3
persona/: customer_service.py
scripts/: credential.py  document_manager.py  embedding_manager.py  preprocesss_data.py  retrieval_agent_manager.py
src/: data_preprocessing.py  data_store.py  main.py
web/: main.py
