[project]
name = "chatbot-bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aspose-words>=24.11.0",
    "docling>=2.8.3",
    "langchain>=0.3.9",
    "loguru>=0.7.3",
    "pdf2docx>=0.5.8",
    "pdfplumber>=0.11.4",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.2",
    "scrapy-proxies>=0.4",
    "scrapy-user-agents>=0.1.1",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
]
